######### 2013-6-7  ###########
alter table shop_items_product add column buyer_prompt varchar(40) NOT NULL;
alter table shop_items_productsku add column buyer_prompt varchar(40) NOT NULL;
######### 2013-6-4  ###########
rename table shop_trades_replayposttrade to trades_replayposttrade;
python manage.py syncdb;
insert into shop_trades_replayposttrade(operator,post_data,order_num,trade_ids,created,finished) 
	select operator,post_data,order_num,trade_ids,created,finished from trades_replayposttrade;
######### 2013-5-30 ###########
alter table shop_trades_mergetrade add column order_num  int(11) DEFAULT 0;
alter table shop_trades_mergetrade add column prod_num   int(11) DEFAULT 0;
######### 2013-5-29 ###########
alter table shop_juhuasuan_pinpaituan add column prod_sku_name varchar(128) NOT NULL;
######### 2013-5-28 ###########
alter table shop_orders_trade add column send_time datetime DEFAULT NULL;
alter table shop_orders_trade add column is_brand_sale tinyint(1) NOT NULL;
alter table shop_orders_trade add column is_force_wlb tinyint(1) NOT NULL;
alter table shop_orders_trade add column trade_from varchar(32) NOT NULL;
alter table shop_orders_trade add column is_lgtype tinyint(1) NOT NULL;
alter table shop_orders_trade add column lg_aging datetime DEFAULT NULL;
alter table shop_orders_trade add column lg_aging_type varchar(64) NOT NULL;
alter table shop_orders_trade add column buyer_rate tinyint(1) NOT NULL;
alter table shop_orders_trade add column seller_rate tinyint(1) NOT NULL;
alter table shop_orders_trade add column seller_can_rate tinyint(1) NOT NULL;
alter table shop_orders_trade add column is_part_consign tinyint(1) NOT NULL;
alter table shop_orders_trade add column step_paid_fee varchar(10) NOT NULL;
alter table shop_orders_trade add column step_trade_status varchar(32) NOT NULL;

alter table shop_trades_mergetrade add column send_time datetime DEFAULT NULL;
alter table shop_trades_mergetrade add column is_brand_sale tinyint(1) NOT NULL;